--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "devDependencies": {
     "chai": "^4.3.7",
-    "chai-http": "^4.3.0"
+    "chai-http": "^4.3.0",
+    "mocha": "^11.7.4",
+    "sinon": "^21.0.0"
   },
   "name": "teste-software-n2",
   "version": "1.0.0",
@@ -67,7 +69,7 @@
     "util-deprecate": "^1.0.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/"
   },
   "repository": {
     "type": "git",
