--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "devDependencies": {
-    "chai": "^4.3.7",
-    "chai-http": "^4.3.0",
+    "chai": "^4.5.0",
+    "chai-http": "^4.4.0",
     "mocha": "^11.7.4",
     "sinon": "^21.0.0"
   },
@@ -15,6 +15,7 @@
   "dependencies": {
     "assertion-error": "^1.1.0",
     "asynckit": "^0.4.0",
+    "axios": "^1.13.1",
     "call-bind-apply-helpers": "^1.0.2",
     "call-bound": "^1.0.4",
     "check-error": "^1.0.3",
